# ShellExtContextMenuHandler

./: .editorconfig  .gitignore  CMakeLists.txt  CppShellExtContextMenuHandler.vcxproj  CppShellExtContextMenuHandler.vcxproj.filters  FileContextMenuExt.cpp  FileContextMenuExt.h  Filter.cpp  Filter.h  MenuActionHandler.cpp  MenuActionHandler.h  MenuConfig.cpp  MenuItem.h  MenuProvider.cpp  MenuProvider.h  README.en.md  README.md  README.zh-CN.md  ReadMe.md  ShellLog.h  dllmain.cpp
.github/workflows/: ci.yml
config/: menu.json
docs/: ARCHITECTURE.en.md  ARCHITECTURE.md  ARCHITECTURE.zh-CN.md
include/shell_ext/: common.h
src/actions/: ActionPlaceholders.cpp  ActionPlaceholders.h  DemoActionLogExecutor.cpp  DemoActionLogExecutor.h  ExecutorRegistry.cpp  ExecutorRegistry.h  IActionExecutor.h  LaunchExecutor.cpp  LaunchExecutor.h  MessageBoxExecutor.cpp  MessageBoxExecutor.h
src/context/: ContextBuilder.cpp  ContextBuilder.h  MenuContext.h
src/extension/: FileContextMenuExt.cpp  FileContextMenuExt.h
src/gates/: DemoHideTempItemGate.cpp  DemoHideTempItemGate.h  DemoReadOnlyPresentationGate.cpp  DemoReadOnlyPresentationGate.h  GateRegistry.cpp  GateRegistry.h  GateTypes.h  IExtensionGate.h  IMenuItemGate.h  IMenuItemPresentationGate.h  JsonFilterGate.cpp  JsonFilterGate.h
src/icons/: BitmapFileIconProvider.cpp  BitmapFileIconProvider.h  DefaultResourceIconProvider.cpp  DefaultResourceIconProvider.h  IIconProvider.h  IconBitmapUtils.cpp  IconBitmapUtils.h  IconProviderRegistry.cpp  IconProviderRegistry.h  SvgIconProvider.cpp  SvgIconProvider.h
src/menu/: InsertedMenuItem.h  MenuActionHandler.cpp  MenuConfig.cpp  MenuConfig.h  MenuContext.h  MenuGateChains.cpp  MenuGateChains.h  MenuItem.h  MenuProvider.cpp  MenuProvider.h  PathHelpers.cpp  PathHelpers.h  ShellLog.cpp
src/platform/: DpiProvider.cpp  DpiProvider.h  OsVersion.cpp  OsVersion.h
tools/: generate-vs.ps1  register.ps1  validate_menu_json.py
